# PhysicsRating-Client

./: .gitignore  AboutPage.qml  Backend.hpp  CMakeLists.txt  HelloPage.qml  InfoPage.qml  Main.qml  OutputPage.qml  README.md  README_RU.md  RegisterPage.qml  StudentWorkClasses.hpp  StudetsInfo.hpp  main.cpp
android/: AndroidManifest.xml  build.gradle
